# earthspy

./: .#README.org  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  CONTRIBUTING.org  README.md  README.org  SatSpy.py~  conf.py  dev-environment.yml  dev-requirements.txt  environment.yml  meta.yaml  requirements-dev.txt  satspy.py  satspy.py~  setup.cfg  setup.py
.github/scripts/: generate_pip_deps_from_conda.py
.github/workflows/: .#main.yml  codeql.yml  conda_build.yml  gh-pages.yml  lint_python.yml  main.yml  super-linter  super-linter.yml
_build/doctrees/: environment.pickle  index.doctree
_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
_build/html/_sources/: index.rst.txt
_build/html/_static/: documentation_options.js
data/: ilulissat.geojson
docs/: .#index.rst  api.rst  conf.py  earthspy.rst  index.rst  modules.rst
docs/_build/doctrees/: earthspy.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  earthspy.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
earthspy/: #earthspy.py#  .#earthspy.py  __init__.py  earthspy.py  espy.py  flycheck_earthspy.py
earthspy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
earthspy/operational/: .#earthspy_NRT.py  earthspy_NRT.py
sat-spy/: earthspy.py  satspy.py  test_satspy.py  test_satspy.py~
tests/: .#test_earthspy.py  auth_test.txt  conftest.py  test_earthspy.py
(+1 files in other folders)
