[metadata]
name = earthspy
version = 0.1.0
description = Wrapper for sentinelhub-py services
author = Adrien Wehrlé
author_email = adrien.wehrle@hotmail.fr
url = https://github.com/AdrienWehrle/earthspy

[options]
packages = find:
install_requires =
   numpy
   gdal-utils
   # geopandas
   # gdal
   sentinelhub

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    earthspy-cli = earthspy.earthspy:EarthSpy
